--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ button {
 
 .remove-btn {
   background: #fff5c2;
-  color: #fff; }
+  color: #5d6fe3; }
 
 .clear-cart-btn {
   background: #a3e1e6;
